<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="nothing" tools:ignore="MissingTranslation"></string>
    <string name="test">abalabalabalabhfjajfojaoijfaiojoijfiejoijofjaijfjoiajoifjejf</string>
    <string name="app_name">中团</string>
    <string name="btn_me_order">我的订单</string>
    <string name="btn_me_collect">我的收藏</string>
    <string name="btn_me_shared">我的分享</string>
    <string name="btn_me_event">我的报名</string>
    <string name="btn_me_history">浏览历史</string>
    <string name="btn_me_address">我的地址</string>
    <string name="btn_me_advice">我的建议</string>
    <string name="tv_ztq">中团券密码：</string>
    <string name="money">￥</string>
    <string name="endtime">有限期至:</string>
    <string name="payed">已支付</string>
    <string name="unget">待收货</string>
    <string name="haveget">已收货</string>
    <string name="my_evlution">我的评价</string>
    <string name="allcost">总价：</string>
    <string name="allsum">数量：</string>
    <string name="allmoney">总计:</string>
    <string name="cash">现金:</string>
    <string name="jtzndzfzh">将退至您的支付账号</string>
    <string name="tkyy">退款原因</string>
    <string name="forhelpus">为了帮助我们做得更好，请提交退款原因（至少选一项）</string>
    <string name="c1">预约不上</string>
    <string name="c2">去过了，不太满意</string>
    <string name="c3">朋友/网上评价不好</string>
    <string name="c4">买多了/买错了</string>
    <string name="c5">计划有变，没时间消费</string>
    <string name="c6">后悔了不想要了</string>
    <string name="c7">商家说可以直接以团购价到店消费</string>
    <string name="c8">其他</string>
    <string name="hint">请输入退款的原因，最多不超过200字</string>
    <string name="btn_setting_editpass">修改密码</string>
    <string name="btn_setting_copyright">版权声明</string>
    <string name="btn_setting_feeback">意见反馈</string>
    <string name="btn_setting_checkversion">检查版本更新</string>
    <string name="btn_setting_aboutus">关于我们</string>
    <string name="btn_me_quite">退出登录</string>
    <string name="btn_info_complete">完成</string>
    <string name="tv_signate">个性签名</string>
    <string name="tv_me_name_tag">	昵称</string>
    <string name="tv_me_id_tag">帐号</string>
    <string name="tv_me_editpass_tag">修改密码</string>
    <string name="tv_me_sex_tag">性别</string>
    <string name="tv_me_birthday_tag">出生日期</string>
    <string name="tv_me_email_tag">邮箱</string>
    <string name="rb_nopay">待支付</string>
    <string name="rb_payed">待收货</string>
    <string name="rb_nocomment">已收货</string>
    <string name="rb_history">退款</string>
    <string name="tag_ordermsg">订单信息</string>
    <string name="tag_ordernum">订单号:</string>
    <string name="tag_createTime">创建时间:</string>
    <string name="tag_payMethod">支付方式:</string>
    <string name="tag_currentStatus">当前状态：</string>
    <string name="tag_echangeMethod">交易方式：</string>
    <string name="tag_buyerMsg">买家信息</string>
    <string name="tag_buyer">收货人：</string>
    <string name="tag_buyer_phone">电话：</string>
    <string name="tag_buyer_id">帐号:</string>
    <string name="tag_buyer_address">收货地址:</string>
    <string name="tag_sellerMsg">卖家信息</string>
    <string name="tag_seller_name">姓名：</string>
    <string name="tag_seller_phone">电话：</string>
    <string name="tag_seller_address">店铺地址：</string>
    <string name="btn_cancel_order">取消订单</string>
    <string name="btn_order">继续支付</string>
    <string name="hint_comment">请输入评价</string>
    <string name="tag_level">等级：</string>
    <string name="fen">分数：</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="btn_comment">发表</string>
    <string name="rb_good">好</string>
    <string name="rb_mid">中</string>
    <string name="rb_worse">差</string>
    <string name="hint_login_phone">请输入手机号码</string>
    <string name="hint_login_password">请输入密码</string>
    <string name="btn_login">登 录</string>
    <string name="btn_new_user">新用户</string>
    <string name="btn_forget_password">忘记密码？</string>
    <string name="tag_register_phone">手&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;机：</string>
    <string name="hint_register_phone">请输入手机号码</string>
    <string name="tag_register_password">密 &#160;&#160;&#160;&#160;&#160;&#160;&#160;码：</string>
    <string name="hint_register_password">请输入密码</string>
    <string name="tag_register_repeat_password">重复密码：</string>
    <string name="hint_register_repeat_password">请再次输入密码</string>
    <string name="btn_next">下一步</string>
    <string name="tag_register_nick_name">昵称：</string>
    <string name="hint_register_nick_name">请输入昵称</string>
    <string name="tag_register_sex">性别：</string>
    <string name="check_register_man">男</string>
    <string name="check_register_woman">女</string>
    <string name="tag_register_birthday">出生日期：</string>
    <string name="hint_register_birthday">点击输入生日</string>
    <string name="btn_register">注册</string>
    <string name="btn_register_mobyzm">点击获取验证码</string>
    <string name="tag_register_mobyzm">验证码</string>
    <string name="hint_register_mobyzm">请输入6位验证码</string>
    <string name="tab_nearby">周边</string>
    <string name="tab_sale">特卖</string>
    <string name="tab_activities">活动</string>
    <string name="tab_me">我的</string>
    <string name="tab_store">商家</string>
    <string name="tab_teambuy">团购</string>
    <string name="btn_business">商家</string>
    <string name="btn_food">美食</string>
    <string name="btn_movie">电影</string>
    <string name="btn_entertainment">娱乐</string>
    <string name="btn_hotel">酒店</string>
    <string name="btn_travel">旅游</string>
    <string name="btn_newd">新单</string>
    <string name="btn_more">更多分类</string>
    <string name="ads">广告</string>
    <string name="suggest">超值推荐</string>
    <string name="btn_store_company_tag">公司详情</string>
    <string name="tv_store_location_tag">商铺地址</string>
    <string name="tv_store_priceAvg_tag">人均：</string>
    <string name="tv_store_description_tag">介绍:</string>
    <string name="tv_store_phone_tag">电话</string>
    <string name="btn_product_list">查看更多商品</string>
    <string name="tv_product_info_tag">商品信息</string>
    <string name="tv_product_store_info_tag">商家信息</string>
    <string name="tv_product_price_market_tag">市场价：</string>
    <string name="btn_product_order">下定单</string>
    <string name="tv_order_price_info_tag">结算信息</string>
    <string name="tv_order_count">共1件</string>
    <string name="tv_order_description">暂无描述</string>
    <string name="et_category_search">搜索</string>
    <string name="tv_order_ex_price_tag">交易金额</string>
    <string name="tv_order_total_price_tag">总金额</string>
    <string name="tv_order_info_tag">收货信息</string>
    <string name="tv_order_address_tag">收货地址</string>
    <string name="tv_order_address_name_phone">暂无收货信息</string>
    <string name="tv_order_address">点击添加</string>
    <string name="tv_order_pay_road">支付方式</string>
    <string name="tv_order_zhifubao">支付宝</string>
    <string name="tv_order_weixin">微信</string>
    <string name="tv_order_yinlian">银联</string>
    <string name="btn_order_post">提交</string>
    <string name="tv_choose_address_province">省:</string>
    <string name="tv_choose_address_city">市:</string>
    <string name="tv_choose_address_street">街道地址:</string>
    <string name="et_choose_name_hint">姓名</string>
    <string name="et_choose_phone_hint">手机</string>
    <string name="et_choose_zcode_hint">邮编</string>
    <string name="cb_choose_default_hint">设为默认地址</string>
    <string name="tv_chooseAddress_banner">新增地址信息</string>
    <string name="btn_addAddress">添加</string>
    <string name="btn_chooseAddress_newAddress">新增地址</string>
    <string name="btn_chooseAddress">选择地址</string>
    <string name="btn_updateAddress">修改地址</string>
    <string name="tv_choose_item_name">名字</string>
    <string name="tv_choose_item_phone">电话</string>
    <string name="tv_choose_item_address">地址</string>
    <string name="hint_choose_streetAddress">请在此填写你的详细地址</string>
    <string name="hint_editpass_newpass">请输入新密码</string>
    <string name="hint_editpass_repeatpass">请再次输入新密码</string>
    <string name="hint_editpass_yzm">验证码：</string>
    <string name="btn_editpass_post">提交</string>
    <string name="forget_password">忘记总有时，万一真的没有后悔药？</string>
    <string name="phone_num">手机号码：</string>
    <string name="please">请输入您的手机号码</string>
    <string name="next">下一步</string>
    <string name="back"> 返回</string>
    <string name="company">公司</string>
    <string name="tv_company_name">方太厨电石牌</string>
    <string name="tv_company_description_tag">介绍:</string>
    <string name="tv_company_description">介绍内容巴拉比例巴拉娜拉卡拉亚拉卡拉来来来娜拉</string>
    <string name="tv_company_phone">13172929299</string>
    <string name="tv_company_phone_tag">电话</string>
    <string name="tv_company_location_tag">公司地址</string>
    <string name="tv_company_location">黄浦达到西中山999号</string>
    <string name="btn_company_company_tag">查看加盟商铺</string>
    <string name="btn_feedback">提交</string>
    <string name="confirm_title">提示</string>
    <string name="ensure">确定</string>
    <string name="content_description_icon">icon</string>
    <string name="refresh">刷新</string>
    <string name="processing">加载中</string>
    <string name="download">下载</string>
    <string name="download_fail">下载安装包失败</string>
    <string name="cancel_install_msp">你已取消安装移动快捷支付服务</string>
    <string name="cancel_install_alipay">你已取消安装支付宝钱包</string>
    <string name="redo">重试</string>
    <string name="install_msp">你尚未安装支付宝移动快捷支付服务，请立即安装</string>
    <string name="install_alipay">你尚未安装支付宝钱包，请立即安装</string>
    <string name="button">我要报名</string>
    <string name="tittle">免费报名</string>
    <string name="tip">请输入完整信息</string>
    <string name="name">姓名</string>
    <string name="address">地址</string>
    <string name="tel">电话</string>
    <string name="need">购买意向</string>
    <string name="submit">立即提交</string>
    <string name="select_city_header">选择城市</string>
    <string name="search_hint">请输入城市中文名称</string>
    <string name="local_city">GPS定位到的城市</string>
    <string name="default_city">广州市</string>
    <string name="hot_city">热门城市</string>
    <string name="all_cities">所有城市</string>
    <string name="city1">北京市</string>
    <string name="city2">上海市</string>
    <string name="city3">深圳市</string>
    <string name="city4">兰州市</string>
    <string name="city5">杭州市</string>
    <string name="city6">武汉市</string>
    <string name="city7">西安市</string>
    <string name="city8">南京市</string>
    <string name="tuangouhui">团购会</string>
    <string name="tuanbohui">团博会</string>
    <string name="food">餐饮美食</string>
    <string name="entertainment">休闲娱乐</string>
    <string name="shopping">居家购物</string>
    <string name="lifeservice">生活服务</string>
    <string name="etc">....</string>
    <string name="btn_lady">女装</string>
    <string name="btn_man">男装</string>
    <string name="btn_packet">箱包</string>
    <string name="btn_makeup">美妆</string>
    <string name="btn_digital">数码</string>
    <string name="btn_baby">母婴</string>
    <string name="btn_food_tm">食品</string>
    <string name="btn_more_tm">更多分类</string>
    <string name="person_sum">本次活动已报名人数:</string>
    <string name="time_sum">距离本次活动时间:</string>
    <string name="person">人</string>
    <string name="activity_sale">活动优惠</string>
    <string name="product_sale">特价产品</string>
    <string name="brand">参与品牌</string>
    <string name="up">收起</string>
    <string name="down">展开</string>
    <string name="transportation">交通线路</string>
    <string name="jbxx">基本信息</string>
    <string name="t1">请输入姓名</string>
    <string name="t2">请输入性别</string>
    <string name="t3">请输入电话</string>
    <string name="t4">请输入地址</string>
    <string name="t5">备注：购买意向</string>
    <string name="header_hint">输入商家、分类或商圈</string>
    <string name="statement">有关中团网的版权声明：</string>
    <string name="copyrights">中团APP是由深圳中团科技有限公司开发出来的一款团购APP，所有解析权归本公司所有</string>
    <string name="contacts">联系方式：</string>
    <string name="contacts_1">深圳中团科技有限公司广州分公司\n地址：广州\n电话：020-85584512\n传真：020-85584512\n电子邮箱：2496926991@qq.com\n网址：www.teambuy.com.cn</string>
</resources>