<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/near_background"
    android:orientation="vertical" >

<include android:id="@+id/header" layout="@layout/x_bar_title"/>
	<ImageView
	    android:layout_below="@id/header"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:id="@+id/shadow1"
	    android:src="@drawable/shadow_heavy"
	    android:contentDescription="@string/nothing"
	    />
    <EditText
        android:id="@+id/input_num"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/shadow1"
        android:hint="@string/please"
        android:paddingTop="17dip"
        android:paddingBottom="17dip"
        android:paddingLeft="17dip"
        android:background="@color/white"
        android:textSize="18sp" />
    <ImageView
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:id="@+id/shadow2"
	    android:layout_below="@id/input_num"
	    android:src="@drawable/shadow_heavy"
	    android:contentDescription="@string/nothing"
	    />

    <Button
        android:id="@+id/nextbtn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/input_num"
        android:layout_centerHorizontal="true"
        android:background="@drawable/bg_find"
        android:onClick="onNextClick"
        android:text="@string/next"
        android:textColor="#FFFFFF"
        android:layout_marginLeft="17dip"
        android:layout_marginRight="17dip"
        android:layout_marginTop="50dip"
        android:textSize="18sp" />

</RelativeLayout>